2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <unistd.h> provides `getlogin' decl.

	* base.h (getlogin): Delete func decl.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <unistd.h> to .c files.

	* base.h: Don't #include <unistd.h>; remove surrounding
	cpp cond #ifdef HAVE_UNISTD_H ... #endif block.
	* ci.c: #include <unistd.h>.
	* rcsedit.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <string.h> to .c files.

	* base.h: Don't #include <string.h>.
	* b-anchor.c: #include <string.h>.
	* b-kwxout.c: Likewise.
	* ci.c: Likewise.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmerge.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <errno.h> provides `ELOOP', `ENOTSUP'.

	* rcsedit.c (resolve_symlink) [!ELOOP]: Remove cpp cond block.
	* rcsutil.c (setup_catchsig): Assume `defined ENOTSUP' == 1.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <stdarg.h> to .c files.

	* base.h: Don't #include <stdarg.h>.
	* b-complain.c: #include <stdarg.h>.
	* rcsgen.c: Likewise.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Incorporate `fvfprintf' into unique caller.

	* rcslex.c (fvfprintf): Incorporate into `aprintf'.
	* base.h (fvfprintf): Delete func decl.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <stdlib.h> to .c files.

	* base.h: Don't #include <stdlib.h>.
	* ci.c: #include <stdlib.h>.
	* co.c: Likewise.
	* ident.c: Likewise.